# FeatureCpp

./: .gitignore  README.md
FeatureCPP/: CMakeLists.txt  compile_commands.json  makefile  xmake.lua
FeatureCPP/.cache/clangd/index/: main.cpp.76C6BA1484EE6E0E.idx  main.cpp.76D39E29B12AD051.idx
FeatureCPP/Modules/: GameFeature.ixx
FeatureCPP/module/: NaLog.ixx  na_log.ixx
FeatureCPP/src/: main.cpp
FeatureCPP/tmp/: config.txt
FeatureCS/: FeatureCS.sln
FeatureCS/FeatureCS/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
FeatureCpp/: main.cpp
FeatureCppStd/: CMakeLists.txt  main.cpp
FeatureCppStd/Modules/: GameFeature.ixx
FeatureCppStd/UnitTest/: ReturnTest.cpp  ReturnTest.h
FeatureRust/: xmake.lua
FeatureUnity/: FeatureUnity.sln
FeatureUnity/Assets/: Data.asset  MonoSimation.cs  UniversalRenderPipelineGlobalSettings.asset
FeatureUnity/Assets/Code/: StateGraph.asset
FeatureUnity/Assets/Code/Editor/: Editor.asmdef
FeatureUnity/Assets/Scenes/: SampleScene.unity
FeatureUnity/ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
FeatureUnity/Temp/: workerlic
FeatureUnity/UserSettings/: EditorUserSettings.asset
FeatureUnity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2022.dwlt  default-2023.dwlt  default-6000.dwlt
FeatureVulkan/: compile_commands.json  xmake.lua
FeatureVulkan/src/: main.cpp
FeatureVulkan/src/renderModule/: Render.ixx
FeatureVulkanProj/: CMakeLists.txt  main.cpp
FeatureVulkanProj/module/: na_log.cppm
(+22 files in other folders)
